@@ -261,7 +261,7 @@ curl http://localhost:8983/solr/update --data-binary '&lt;commit/>'
       <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;fl=name,id">q=video&amp;fl=name,id</a>       (return only name and id fields)   </li>
       <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;fl=name,id,score">q=video&amp;fl=name,id,score</a>  (return relevancy score as well) </li>
       <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;fl=*,score">q=video&amp;fl=*,score</a>        (return all stored fields, as well as relevancy score)  </li>
-      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;price desc&amp;fl=name,id">q=video;price desc&amp;fl=name,id</a>  (add sort specification: sort by price descending) </li>
+      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;price desc&amp;fl=name,id">q=video&amp;sort=price desc&amp;fl=name,id</a>  (add sort specification: sort by price descending) </li>
     </ul>
 
   <p>
@@ -273,21 +273,21 @@ curl http://localhost:8983/solr/update --data-binary '&lt;commit/>'
     <title>Sorting</title>
 
     <p>
-      Solr provides a simple extension to the Lucene QueryParser syntax for specifying sort options.  After your search, add a semi-colon followed by a list of "field direction" pairs...
+      Solr provides a simple extension to the Lucene QueryParser syntax for specifying sort options.  Use the 'sort' parameter to specify "field direction" pairs...
     </p>
 
     <ul>
-      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;price+desc">video; price desc</a></li>
-      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;price+asc">video; price asc</a></li>
-      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;inStock+asc+price+desc">video; inStock asc, price desc</a></li>
+      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;sort=price+desc">video; price desc</a></li>
+      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;sort=price+asc">video; price asc</a></li>
+      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;sort=inStock+asc+price+desc">video; inStock asc, price desc</a></li>
     </ul>
 
     <p>
       "score" can also be used as a field name when specifying a sort...
     </p>
     <ul>
-      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;score+desc">video; score desc</a></li>
-      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video;inStock+asc,score+desc">video; inStock asc, score desc</a></li>
+      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;sort=score+desc">video; score desc</a></li>
+      <li><a href="http://localhost:8983/solr/select/?indent=on&amp;q=video&amp;sort=inStock+asc,score+desc">video; inStock asc, score desc</a></li>
     </ul>
 
     <p>
